[gd_scene load_steps=4 format=3 uid="uid://bnl7bytt2uxnr"]

[ext_resource type="Script" path="res://Scripts/ui.gd" id="1_hcqpi"]

[sub_resource type="LabelSettings" id="LabelSettings_81yav"]
font_size = 58

[sub_resource type="LabelSettings" id="LabelSettings_dcjua"]
font_size = 60

[node name="UI" type="Control"]
process_mode = 3
custom_minimum_size = Vector2(50, 50)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 854.0
offset_bottom = 480.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
size_flags_vertical = 0
script = ExtResource("1_hcqpi")

[node name="PlayerInfo" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 100.0
grow_horizontal = 2

[node name="Player1" type="VBoxContainer" parent="PlayerInfo"]
custom_minimum_size = Vector2(50, 100)
layout_mode = 2
size_flags_horizontal = 6
alignment = 1

[node name="PlayerScore" type="Label" parent="PlayerInfo/Player1"]
layout_mode = 2
size_flags_vertical = 1
text = "0"
label_settings = SubResource("LabelSettings_81yav")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Player2" type="VBoxContainer" parent="PlayerInfo"]
custom_minimum_size = Vector2(50, 100)
layout_mode = 2
size_flags_horizontal = 6
alignment = 1

[node name="PlayerScore" type="Label" parent="PlayerInfo/Player2"]
layout_mode = 2
size_flags_vertical = 1
text = "0"
label_settings = SubResource("LabelSettings_81yav")
horizontal_alignment = 1
vertical_alignment = 1

[node name="PlayAgainScreen" type="ColorRect" parent="."]
z_index = 1
custom_minimum_size = Vector2(550, 270)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -10.675
offset_top = -8.63998
offset_right = 10.675
offset_bottom = 8.63998
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 4
color = Color(0.0980985, 0.0980985, 0.0980985, 1)

[node name="PlayAgainLabel" type="Label" parent="PlayAgainScreen"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 129.0
grow_horizontal = 2
text = "Player X Wins"
label_settings = SubResource("LabelSettings_dcjua")
horizontal_alignment = 1
vertical_alignment = 1

[node name="RestartButton" type="Button" parent="PlayAgainScreen"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -101.0
offset_top = -95.0
offset_right = 101.0
offset_bottom = -31.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 32
text = "Play Again"

[connection signal="pressed" from="PlayAgainScreen/RestartButton" to="." method="_on_restart_button_pressed"]
